<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:background="@drawable/bgr_setting">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_back"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_notification_bar"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_regular"/>

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:thumb="@drawable/customswiththumb"
                app:track="@drawable/customswith"
                android:checked="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manage_shortcuts"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_centerVertical="true"
                android:fontFamily="@font/poppins_regular"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_next"
                android:layout_alignParentRight="true"
                android:padding="10dp"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>