<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical"
        android:background="#EFEFEF">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="10dp"
            android:id="@+id/img_setting"
            android:src="@drawable/baseline_settings_24" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="280dp"
                android:layout_height="280dp"
                android:src="@drawable/circle_home"
                android:id="@+id/img_circle"
                android:layout_centerHorizontal="true"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:src="@drawable/incircle_home"
                android:layout_centerHorizontal="true"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="97"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/black"
                    android:id="@+id/txt_persent"
                    android:layout_marginBottom="-20dp"
                    android:textSize="69sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/some_items_can_be_optimized"
                    android:textColor="#575454"
                    android:fontFamily="@font/poppins_light"
                    android:textSize="13sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/optimized"
                    android:textColor="#67A6E1"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="30sp"/>

            </LinearLayout>

        </RelativeLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            
            <ImageView
                android:layout_width="152dp"
                android:layout_height="18dp"
                android:scaleType="fitXY"
                android:src="@drawable/bt_circlehome"/>
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="27dp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="102dp"
                    android:gravity="center"
                    android:layout_weight="1">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:cardCornerRadius="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:backgroundTint="@color/white">
                        
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:orientation="vertical">
                            
                            <ImageView
                                android:layout_width="37dp"
                                android:layout_height="37dp"
                                android:src="@drawable/ic_trash"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/clean_up_memory"
                                android:textColor="@color/black"
                                android:fontFamily="@font/poppins_regular"
                                android:textSize="16sp"/>
                            
                        </LinearLayout>
                        
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="102dp"
                    android:gravity="center"
                    android:layout_weight="1">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_height="100dp"
                        app:cardCornerRadius="10dp"
                        android:backgroundTint="@color/white">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="37dp"
                                android:layout_height="37dp"
                                android:src="@drawable/ic_security"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/scan_virus"
                                android:textColor="@color/black"
                                android:fontFamily="@font/poppins_regular"
                                android:textSize="16sp"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="102dp"
                    android:gravity="center"
                    android:layout_weight="1">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_height="100dp"
                        app:cardCornerRadius="10dp"
                        android:backgroundTint="@color/white">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="37dp"
                                android:layout_height="37dp"
                                android:src="@drawable/ic_testhardware"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/hardwaretest"
                                android:textColor="@color/black"
                                android:textSize="16sp"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="102dp"
                    android:gravity="center"
                    android:layout_weight="1">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_height="100dp"
                        app:cardCornerRadius="10dp"
                        android:backgroundTint="@color/white">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="37dp"
                                android:layout_height="37dp"
                                android:src="@drawable/ic_photo"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cleanphotoandvideo"
                                android:textColor="@color/black"
                                android:textSize="16sp"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="102dp"
                    android:gravity="center"
                    android:layout_weight="1">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_height="100dp"
                        app:cardCornerRadius="10dp"
                        android:backgroundTint="@color/white">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:orientation="vertical">

                            <FrameLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <ImageView
                                    android:layout_width="37dp"
                                    android:layout_height="37dp"
                                    android:src="@drawable/bgr_game"/>

                                <ImageView
                                    android:layout_width="25dp"
                                    android:layout_height="25dp"
                                    android:layout_gravity="center"
                                    android:src="@drawable/circlegame"/>

                                <ImageView
                                    android:layout_width="16dp"
                                    android:layout_height="11dp"
                                    android:layout_gravity="center"
                                    android:src="@drawable/ic_game"/>

                            </FrameLayout>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/speedupgame"
                                android:textColor="@color/black"
                                android:fontFamily="@font/poppins_regular"
                                android:textSize="16sp"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="102dp"
                    android:gravity="center"
                    android:layout_weight="1">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_height="100dp"
                        app:cardCornerRadius="10dp"
                        android:backgroundTint="@color/white">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="37dp"
                                android:layout_height="37dp"
                                android:src="@drawable/ic_deepclean"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/deepclen"
                                android:fontFamily="@font/poppins_regular"
                                android:textColor="@color/black"
                                android:textSize="16sp"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>